cmake_minimum_required(VERSION 3.17)
project(part1)

set(CMAKE_CXX_STANDARD 14)

add_executable(part1
        chapter1/exercises/ex1-1.cpp
        chapter1/exercises/ex1-4.cpp
        chapter1/exercises/ex1-5.cpp
        chapter1/exercises/ex1-6.cpp
        chapter1/main.cpp
        chapter2/ex2-1.cpp)
